--- a/proofs_jay_cummings/1.4a.md
+++ b/proofs_jay_cummings/1.4a.md
@@ -1,3 +1,6 @@
-Proposition 1.4: Suppose that m and n are positive odd integers
+```math
+Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers
 
-a) Does there exist a perfect cover of $m \times n$ chessboard.
+a)\;Does\;there\;exist\;a\;perfect\;cover\;m \times \;n\;chessboard.
+
+```
