--- a/proofs_jay_cummings/1.4a.md
+++ b/proofs_jay_cummings/1.4a.md
@@ -1,5 +1,5 @@
 ```math
-Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers\
+Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers <br>
 a)\;Does\;there\;exist\;a\;perfect\;cover\;m \times \;n\;chessboard.
 
 ```
