--- a/proofs_jay_cummings/1.4a.md
+++ b/proofs_jay_cummings/1.4a.md
@@ -6,6 +6,11 @@ a)\;Does\;there\;exist\;a\;perfect\;cover\;m \times \;n\;chessboard.
 Assume\;there\;a\;perfect\;cover\;for\;the\;m\times\;n\;chessboard. \\
 Let\;b\;=\;area\;of\;the\;domino \\
 
-Let\;c\;=\dfrac{mn}{c},\;where\;c\in\mathbb{Z^+}\\
+Let\;c\;=\dfrac{mn}{b},\;where\;c\in\mathbb{Z^+}\\
+
+However,\;since\;m\times\;n\;is\;odd\;positive\;integer\;and\;b\;is\;an\;even\;positive\;integer\\
+c\;will\;never\;be\;a\;positive\;integer.\;Contradiction.
+
+\therefore There\;is\;no\;perfect\;cover\;for\;m\times\;n.
 }
 ```
