--- a/proofs_jay_cummings/1.4a.md
+++ b/proofs_jay_cummings/1.4a.md
@@ -9,7 +9,7 @@ Let\;b\;=\;area\;of\;the\;domino \\
 Let\;c\;=\dfrac{mn}{b},\;where\;c\in\mathbb{Z^+}\\
 
 However,\;since\;m\times\;n\;is\;odd\;positive\;integer\;and\;b\;is\;an\;even\;positive\;integer\\
-c\;will\;never\;be\;a\;positive\;integer.\;Contradiction.
+c\;will\;never\;be\;a\;positive\;integer.\;Contradiction. \\
 
 \therefore There\;is\;no\;perfect\;cover\;for\;m\times\;n.
 }
