--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -1,6 +1,6 @@
 ```math
 \displaylines{
 Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
-b)If\;I\;remove\;1\;square\;from\;m\times\n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
+b)If\;I\;remove\;1\;square\;from\;m\timesn\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
 }
 ```
