--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -6,6 +6,6 @@ $$\define\floors#1{\lceil #1 \rceil}$$
 \displaylines{
 Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 b)If\;I\;remove\;1\;square\;from\;m\times\;n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
-\floors{m+n}
+\floor{m+n}
 }
 ```
