--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -2,12 +2,10 @@
 
 
 ```math
-\usepackage{mathtools}
-\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
 \displaylines{
 Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 b)If\;I\;remove\;1\;square\;from\;m\times\;n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
-\lfloor x \rfloor
+Assume\;there\;is\lfloor \dfrac{m \times n}{2} \rfloor black\; boxes and \lfloor \dfrac{m \times n}{2} \rfloor+1 white boxes \\
 }
 ```
