--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -6,6 +6,6 @@
 \displaylines{
 Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 b)If\;I\;remove\;1\;square\;from\;m\times\;n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
-Assume\;there\;is\;\lfloor \dfrac{m \times n}{2} \rfloor black\; boxes\;and\;\lfloor \dfrac{m \times n}{2} \rfloor +1\;white\;boxes \\
+Assume\;there\;is\;\lfloor \dfrac{m \times n}{2} \rfloor \;black\; boxes\;and\;\lfloor \dfrac{m \times n}{2} \rfloor +1\;white\;boxes \\
 }
 ```
