--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -5,5 +5,17 @@
 Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 b)If\;I\;remove\;1\;square\;from\;m\times\;n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
 Assume\;there\;is\;a\;=\lfloor \dfrac{m \times n}{2} \rfloor \;black\; boxes\;and\;b\;=\lfloor \dfrac{m \times n}{2} \rfloor +1\;white\;boxes\;where\;a,\;b\in\mathbb{Z^+} \\
+Notice\;that\;a\;domino\;covers\;exactly\;one\;white\;box\;and\;one\;black\;box \\
+Therefore,\;for\;this\;to\;be\;true\;then\;a=b\;must\;be\;true \\
+Case\;1: \\
+A\;white\;box\;removed \\
+a=b\\
+There\;exist\;a\;perfect\;cover\;chessboard \\
+
+A\;black\;box\;removed \\
+a+2=b
+No\;perfect\;cover\;chessboard\;can\;exist \\
+
+\therefore The\;colour\;box\;removed\;must\;be\;an\;odd\;amount\;for\;a\;perfect\;cover\;to\;exist
 }
 ```
