--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -11,9 +11,10 @@ Case\;1: \\
 A\;white\;box\;removed \\
 a=b\\
 There\;exist\;a\;perfect\;cover\;chessboard \\
-
+\\
+Case\;2: \\
 A\;black\;box\;removed \\
-a+2=b
+a+2=b \\
 No\;perfect\;cover\;chessboard\;can\;exist \\
 
 \therefore The\;colour\;box\;removed\;must\;be\;an\;odd\;amount\;for\;a\;perfect\;cover\;to\;exist
