--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -14,7 +14,7 @@ There\;exist\;a\;perfect\;cover\;chessboard \\
 \\
 Case\;2: \\
 A\;black\;box\;removed \\
-a+2=b \\
+a+2=b,\;hence\;a\neq b \\
 No\;perfect\;cover\;chessboard\;can\;exist \\
 
 \therefore The\;colour\;box\;removed\;must\;be\;an\;odd\;amount\;for\;a\;perfect\;cover\;to\;exist
