--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -8,12 +8,12 @@ Assume\;there\;is\;a\;=\lfloor \dfrac{m \times n}{2} \rfloor \;black\; boxes\;an
 Notice\;that\;a\;domino\;covers\;exactly\;one\;white\;box\;and\;one\;black\;box \\
 Therefore,\;for\;this\;to\;be\;true\;then\;a=b\;must\;be\;true \\
 Case\;1: \\
-A\;white\;box\;removed \\
+A\;white\;box\;is\;removed \\
 a=b\\
 There\;exist\;a\;perfect\;cover\;chessboard \\
 \\
 Case\;2: \\
-A\;black\;box\;removed \\
+A\;black\;box\;is\;removed \\
 a+2=b,\;hence\;a\neq b \\
 No\;perfect\;cover\;chessboard\;can\;exist \\
 
