--- a/proofs_jay_cummings/1.4a.md
+++ b/proofs_jay_cummings/1.4a.md
@@ -1,6 +1,6 @@
 ```math
 \displaylines{
-Proposition\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
+Exercise\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 a)\;Does\;there\;exist\;a\;perfect\;cover\;m \times \;n\;chessboard. \\ \\
 
 Assume\;there\;a\;perfect\;cover\;for\;the\;m\times\;n\;chessboard. \\
