--- a/proofs_jay_cummings/1.4b.md
+++ b/proofs_jay_cummings/1.4b.md
@@ -5,7 +5,7 @@ Exercise\;1.4:\;Suppose\;that\;m\;and\;n\;are\;positive\;odd\;integers \\ \\
 b)If\;I\;remove\;1\;square\;from\;m\times\;n\;chessboard,\;will\;it\;have\;a\;perfect\;cover? \\ \\
 Assume\;there\;is\;a\;=\lfloor \dfrac{m \times n}{2} \rfloor \;black\; boxes\;and\;b\;=\lfloor \dfrac{m \times n}{2} \rfloor +1\;white\;boxes\;where\;a,\;b\in\mathbb{Z^+} \\
 Notice\;that\;a\;domino\;covers\;exactly\;one\;white\;box\;and\;one\;black\;box \\
-Therefore,\;for\;this\;to\;be\;true\;then\;a=b\;must\;be\;true \\
+Therefore,\;for\;this\;to\;be\;true,\;a=b\;must\;be\;true \\
 \\
 Case\;1: \\
 A\;white\;box\;is\;removed \\
