--- a/proofs_jay_cummings/1.5.md
+++ b/proofs_jay_cummings/1.5.md
@@ -1,5 +1,5 @@
 ```math
 \displaylines{
-Exercise\;1.5: 
+Exercise\;1.5:\;If\;I\;remove\;two\;squares\;of\;different\;colors\;from\;an\;8\times 8\;chessboard,\; must\; the\;result\;have\;a\;perfect\;cover? \\
 }
 ```
