--- a/proofs_jay_cummings/1.8.md
+++ b/proofs_jay_cummings/1.8.md
@@ -2,6 +2,7 @@
 \displaylines{
 Exercise\;1.8:\;Prove\;that\;if\;one\;chooses\;n+1\;numbers\;from\; \{1,2,3,\dots ,2n\},\;it\;is\;guaranteed\;that\;two\;of\;the\;numbers\;they\;chose\;are\;consecutive. \\
 \\
-In\;the\;set\;\{1,2,3,\dots ,2n\}\;contains\;n\;even\;numbers\;and\;n\;odd\;numbers.
+In\;the\;set\;\{1,2,3,\dots ,2n\}\;contains\;n\;even\;numbers\;and\;n\;odd\;numbers.\\
+To\;show\;that\;there\;is\;atleast\;two\;consecutive\;numbers\;\;there\;must\;be\;atleast\;one\;even\;and\;odd\;number\;chosen \\
 }
 ```
