--- a/proofs_jay_cummings/1.10.md
+++ b/proofs_jay_cummings/1.10.md
@@ -1,5 +1,6 @@
 ```math
 \displaylines{
-Exercise\;1.10:\;Assume\;that\;n\;is\;a\;positive\;integer.\;Prove\;that\;if\;one\;selects\;any\;n+1\;numbers\;from\;the\;set\;\{1,2,3,\dots ,\},\;then\,two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1.
+Exercise\;1.10:\;Assume\;that\;n\;is\;a\;positive\;integer.\;Prove\;that\;if\;one\;selects\;any\;n+1\;numbers\;from\;the\;set\;\{1,2,3,\dots ,\},\;then\\
+two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1.
 }
 ```
