--- a/proofs_jay_cummings/1.10.md
+++ b/proofs_jay_cummings/1.10.md
@@ -1,6 +1,8 @@
 ```math
 \displaylines{
 Exercise\;1.10:\;Assume\;that\;n\;is\;a\;positive\;integer.\;Prove\;that\;if\;one\;selects\;any\;n+1\;numbers\;from\;the\;set\;\{1,2,3,\dots ,2n\},\;then\\
-two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1.
+two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1. \\
+\\
+If\;you\;notice\;the\;last\;and\;first\;element\;of\;the\;set\;adds\;up\;to\;2n+1,\;this\;follows\;for\;the\;next\;elements\;e.g.\;2n-1+2.
 }
 ```
