--- a/proofs_jay_cummings/1.10.md
+++ b/proofs_jay_cummings/1.10.md
@@ -4,6 +4,8 @@ Exercise\;1.10:\;Assume\;that\;n\;is\;a\;positive\;integer.\;Prove\;that\;if\;on
 two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1. \\
 \\
 If\;you\;notice\;the\;last\;and\;first\;element\;of\;the\;set\;adds\;up\;to\;2n+1,\;this\;follows\;for\;the\;next\;elements\;e.g.\;2n-1+2.\\
-So\;if\;were\;to\;add\;each\;pair\;of\;elements\;then\;the\;result\;will\;be\;\{2n+1,2n-1+2,2n-2+3,\dots ,n+1+n\}.
+So\;if\;were\;to\;add\;each\;pair\;of\;elements\;then\;the\;result\;will\;be\;\{2n+1,2n-1+2,2n-2+3,\dots ,n+1+n\}.\\
+Which\;results\;in\;n\;pairs\;of\;numbers,\;according\;to\;the\;pigeonhole\;principle\;,\\
+assuming\;that\;k\;and\;n\;are\;positive\;intergers\;
 }
 ```
