--- a/proofs_jay_cummings/1.10.md
+++ b/proofs_jay_cummings/1.10.md
@@ -7,7 +7,7 @@ If\;you\;notice\;the\;last\;and\;first\;element\;of\;the\;set\;adds\;up\;to\;2n+
 So\;if\;were\;to\;add\;each\;pair\;of\;elements\;then\;the\;result\;will\;be\;\{2n+1,2n-1+2,2n-2+3,\dots ,n+1+n\}.\\
 Which\;results\;in\;n\;pairs\;of\;numbers,\;according\;to\;the\;pigeonhole\;principle\;,\\
 assuming\;that\;k\;and\;n\;are\;positive\;intergers,\;if\;kn+1\;objects\;are\;placed\;into\;n\;boxes,\;then\;at\;least\;one\;box\;has\;at\;least\;k+1\;objects\;in\;it. \\
-Since\;we\;have\;n\;pairs(or\;boxes)\;then\;we\;require\;n+1\;numbers\;chosen\;for\;at\;least\;one\;pair\;number\;to\;exist.
+Since\;we\;have\;n\;pairs(or\;boxes)\;then\;we\;require\;n+1\;numbers\;chosen\;for\;at\;least\;one\;pair\;number\;to\;exist. \\
 
 \therefore \;two\;of\;the\;selected\;numbers\;will\;summ\;to\;2n+1.
 }
